horizontal scroll fix

--- a/style/styles.css
+++ b/style/styles.css
@@ -7,6 +7,7 @@ html {
   font-size: 10px;
 }
 
+
 /* Wrapper for the Homepage- sets the grid for homepage */
 .wrapper {
   background-color: #F0F0F0;
@@ -853,6 +854,18 @@ small {
   text-align: center;
 }
 
+.front_end {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-column: 1 / -1;
+}
+
+.screens_six {
+  display: grid;
+  grid-column: 1 / -1;
+  justify-items: center;
+}
+
 .user-stories, .user-flows, .site-map, .wireframes, .branding, .mockups {
   display: grid;
   grid-column: 1 / -1;
@@ -949,6 +962,11 @@ small {
 
 .style_examples {
   padding-top: 3rem;
+}
+
+.screens_six img {
+  width: 90%;
+  max-width: 33.7rem;
 }
 
 .style_examples a, .final_design a {
